--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros2acceleration
-	previous = 
-	base = a56d0796d417
+	previous = a56d0796d417
+	base = bfed5952f7ed
 	trim = 
 	trimbase = 
